--- a/style.css
+++ b/style.css
@@ -50,9 +50,21 @@ h1 {
     margin-right: auto;
 }
 
+#explanation {
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 80%;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: #DDD;
+}
+
 #form {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 input {
